@@ -34,7 +34,7 @@ public class DozerConverterTest {
     @Test
     public void parseEntityListToVOListTest() {
         List<PersonVO> outputList = DozerMapper.parseListObjects(inputObject.mockEntityList(), PersonVO.class);
-        PersonVO outputZero = outputList.get(0);
+        PersonVO outputZero = outputList.getFirst();
 
         assertEquals(Long.valueOf(0L), outputZero.getKey());
         assertEquals("First Name Test0", outputZero.getFirstName());
